ajoute du swagger pour le reset password
